--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,9 @@
 # See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
+orbs:
+  browser-tools: circleci/browser-tools@1.2.3
+
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
@@ -13,6 +16,13 @@ jobs:
     # Add steps to the job
     # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
+      - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
+      - run:
+          command: |
+            google-chrome --version
+            chromedriver --version
+          name: Check install
       - checkout
 
       # Download and cache dependencies
@@ -23,21 +33,21 @@ jobs:
             - node-deps-v1-{{ .Branch }}-{{checksum "package-lock.json"}}
       - run:
           name: install packages
-          command: npm ci
+          command: npm install
       - save_cache:
           key: node-deps-v1-{{ .Branch }}-{{checksum "package-lock.json"}}
           paths:
-            - ~/.npm
+            - "node_modules"
+      - run:
+          name: Run Build
+          command: npm run build:prod
       - run:
           name: Run Tests
-          command: npm run ng build --prod
-      - run:
-          name: Run Tests
-          command: npm run ng test --single-run
+          command: npm run testci
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  orb-free-workflow:
+  default_workflow:
     jobs:
       - build
